name:                Poker
version:             0.1.0.0
homepage:            https://github.com/yizhang7210/Indices/blob/master/PokerChallenge/README.md
license:             MIT
license-file:        LICENSE
author:              Yi Zhang
maintainer:          yi.zhang7210@gmail.com
copyright:           2017 Yi Zhang
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Poker
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Hands
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base >= 4.7 && < 5
                     , tasty >= 0.7
                     , tasty-hunit
